src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Forecast_Amount__c</fullName>
        <label>Forecast Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Category__c</fullName>
        <label>Forecast Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <length>200</length>
        <type>Text</type>
    </fields>
</CustomObject>